--- a/data/work.yml
+++ b/data/work.yml
@@ -1,4 +1,4 @@
-enable: true
+enable: false
 title: Just some of our latest projects.
 subtitle: Don’t just take our word for it. Check out some of our latest work.
 
