--- a/data/testimonial.yml
+++ b/data/testimonial.yml
@@ -1,5 +1,5 @@
 enable: true
-title: Like what you see?  Help spread the word by liking us on Github/Twitter, help build a package, or help with the the Carme toolkit.
+title: Like what you see?  Help spread the word by liking us on Github/Twitter, help build a package, or help with building the Carme CLI system itself.
 paragraph: >
   Right now we are developing targeted solutions for data science communities as we build out the Carme command line interface, documentation, and tutorials. Have a data science problem you think that CarmeLabs might be able to solve? Let us know!
 
