--- a/data/testimonial.yml
+++ b/data/testimonial.yml
@@ -17,12 +17,12 @@ numbers:
     counter: 10
     text: GitHub Likes
 
-# people:
-#   - text: >
-#       This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd.
-#     image: img/item-img1.jpg
-#     name: Rose Ray
-#     role: CEO-Themefisher
+ people:
+   - text: >
+       How has carme made your workflow easier?  Seeking testimonials for this section!
+     image: img/item-img1.jpg
+     name: You
+     role: Data Scientist
 #   - text: >
 #       This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd.
 #     image: img/item-img1.jpg
