--- a/config.toml
+++ b/config.toml
@@ -19,10 +19,10 @@ googleAnalytics = "UA-32817743-4"
     weight = 4
     name = "Star on Github"
     url = "https://github.com/CarmeLabs/carme"
-  #[[menu.header]]
-  #  weight = 5
-  #  name = "Contact"
-  #  url = "/contact"
+  [[menu.header]]
+    weight = 5
+    name = "Get the Whitepaper"
+    url = "/contact"
 
   [[menu.footer]]
     weight = 1
