--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ googleAnalytics = "UA-32817743-4"
     url = "https://github.com/CarmeLabs/carme"
   [[menu.header]]
     weight = 5
-    name = "Get the Whitepaper"
+    name = "Get the Paper"
     url = "/contact"
 
   [[menu.footer]]
