--- a/config.toml
+++ b/config.toml
@@ -59,13 +59,13 @@ googleAnalytics = "UA-32817743-4"
   [params.slider]
     enable = true
     title = "The Framework for Data Artisans"
-    subtitle = "Jupyter and Docker centric data science workflows. <br/>"
+    subtitle = "Jupyter and Container centric data science workflows for building AI applications. <br/>"
 
   [params.wrapper]
     enable = true
     title = "About Carme"
-    italic = "The CarmeLabs teams is a set of academics & data hackers from RPI. "
-    paragraph = "Find more about the CarmeLabs team."
+    italic = "Why does AI need a framework?"
+    paragraph = "Frameworks have long been the friend of the web developers, increasing productivity by easing processes of getting started, building, and deploying applications. Loosely modeled after Laravel, Carme is designed to help data scientists to create and deploy data applications."
 
   [params.blog]
     enable = true
