--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,10 @@ objectname==0.0.26
 ordereddict==1.1
 public==0.0.65
 py3==0.0.22
-requests==2.18.4
+requests>=2.20.0
 six==1.11.0
 smmap==0.9.0
 tolist==0.0.27
-urllib3==1.22
+urllib3>=1.24.2
 validators==0.12.1
 websocket-client==0.46.0
